客户端登录

--- a/ChatRoom/pom.xml
+++ b/ChatRoom/pom.xml
@@ -36,22 +36,22 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>6.1.3</version>
+            <version>5.3.19</version> <!-- 替换为你需要的版本号 -->
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>6.1.2</version>
+            <version>5.3.19</version> <!-- 替换为你需要的版本号 -->
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
-            <version>6.1.2</version>
+            <version>5.3.19</version> <!-- 替换为你需要的版本号 -->
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aop</artifactId>
-            <version>6.1.2</version>
+            <version>5.3.19</version> <!-- 替换为你需要的版本号 -->
         </dependency>
 
     </dependencies>
