--- a/ChatRoom/pom.xml
+++ b/ChatRoom/pom.xml
@@ -53,7 +53,11 @@
             <artifactId>spring-aop</artifactId>
             <version>5.3.19</version> <!-- 替换为你需要的版本号 -->
         </dependency>
-
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>33.0.0-jre</version>
+        </dependency>
     </dependencies>
 
 </project>
